--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,13 @@
     <div class="main-logo"></div>
     <div class="header-menu">
       <button
-        [routerLink]="['','main']" [routerLinkActive]="['btn-active']">首页
+        routerLink="index" [routerLinkActive]="['btn-active']">首页
       </button>
       <button
-        [routerLink]="['','link']" [routerLinkActive]="['btn-active']">系统
+        routerLink="link" [routerLinkActive]="['btn-active']">生成链接
       </button>
       <button
-        [routerLink]="['','management']" [routerLinkActive]="['btn-active']">洗车
+        routerLink="management" [routerLinkActive]="['btn-active']">管理
       </button>
     </div>
     <div class="main-header">
